--- a/developer-portfolio/index.html
+++ b/developer-portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <from>
     <!.. CSS Styles ..>
     <link rel ="stylesheet" href="assets/css/styles.css" />
 
@@ -20,7 +20,8 @@
     <link
       ref="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />      
+    />
+    </from>     
     <title>Pavan Kumar | Wrb Developer</title>
 </head>
 
